<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" android:padding="10dp"
        android:fitsSystemWindows="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewLabelFragmentDangKy"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_edHoTenDangKy"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp">

            <com.example.nlushop.customView.EmailEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edHoTenDangKy"
                android:hint="@string/fullName"
                android:background="@color/white"
                android:layout_weight="1"></com.example.nlushop.customView.EmailEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_edDiaChiEmailDangKy"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp">

            <com.example.nlushop.customView.EmailEditText
                android:id="@+id/edDiaChiEmailDangKy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/email"
                android:layout_weight="1"></com.example.nlushop.customView.EmailEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_edMatKhauDangKy"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:fitsSystemWindows="false"
            >

            <com.example.nlushop.customView.PasswordEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edMatKhauDangKy"
                android:hint="@string/password"
                app:useEyeHide="true"
                app:useValidate="true"
                android:background="@color/white"
                android:layout_weight="1"></com.example.nlushop.customView.PasswordEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/requiedPassword"
            android:layout_margin="10dp"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_edNhapLaiMatKhauDangKy"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:fitsSystemWindows="false">

            <com.example.nlushop.customView.PasswordEditText
                android:id="@+id/edNhapLaiMatKhauDangKy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fitsSystemWindows="false"
                android:hint="@string/retypePassword"
                app:useEyeHide="true"
                android:layout_weight="1"></com.example.nlushop.customView.PasswordEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchEmailDocQuyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchTextDangKy"
            android:checked="true"
            android:layout_margin="10dp"></androidx.appcompat.widget.SwitchCompat>

        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangKy"
            android:padding="10dp"
            android:background="@color/bgLogo"></Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dieuKhoanDK"
            android:layout_margin="10dp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/orRegister"
            android:gravity="center"
            android:layout_margin="10dp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnDangNhapFBDK"
                android:drawableLeft="@drawable/facebookiconsmall"
                android:layout_weight="1"
                android:text="Facebook"
                android:textSize="12sp"
                android:textColor="@color/colorFacebook"
                android:theme="@style/buttonFacebookColor"
                android:textAllCaps="false"/>
            <!--        android:background="@drawable/outlinefacebook"-->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnDangNhapGGDK"
                android:drawableLeft="@drawable/googleplussmall"
                android:layout_weight="1"
                android:text="Google"
                android:textSize="12sp"
                android:textColor="@color/colorGoogle"
                android:theme="@style/buttonGoogleColor"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>